feat: fill in main-container

--- a/index.html
+++ b/index.html
@@ -27,26 +27,59 @@
             </nav>
         </div>
     </header>
-    <main class="main">
+    <main class="main main-container">
         <div class="container">
             <section class="section" id="profile">
                 <h1 class="section-title">Repnikova Evgeniya</h1>
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
-                <ul class="sec-list">
-                    <li class="sec-item">Mobile: +79517848726</li>
-                    <li class="sec-item">Email: evrepni@gmail.com</li>
-                    <li class="sec-item">Discord: Eugenia (@eugeniare)</li>
+                <ul class="section-list">
+                    <li class="section-item">Mobile: +79517848726</li>
+                    <li class="section-item">Email: evrepni@gmail.com</li>
+                    <li class="section-item">Discord: Eugenia (@eugeniare)</li>
                 </ul>
             </section>
-            <section class="section" id="summary"></section>
-            <section class="section" id="skills"></section>
-            <section class="section" id="code"></section>
-            <section class="section" id="courses"></section>
-            <section class="section" id="projects"></section>
-            <section class="section" id="education"></section>
-            <section class="section" id="languages"></section>
+            <section class="section" id="summary">
+                <h2 class="section-title">Summary</h2>
+                <p>I'd like to get new useful knowledge in programming. 
+                    Now I'm on maternity leave and I need to look for a new job soon. 
+                    Also I really like to learn something new.</p>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul class="section-list">
+                    <li class="section-item">Web-development: HTML5, CSS3, JavaScript</li>
+                    <li class="section-item">Version control: GIT, Github</li>
+                </ul>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+                <code>
+                    const stringToNumber = function(str){
+                    return Number(str)
+                  }</code>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">Courses</h2>
+                <ul class="section-list">
+                    <li class="section-item">2014 - 2017; English courses in South Ural 
+                        State University (national research university)</li>
+                    <li class="section-item">2018; Scientific consulting and training center "Serto"</li>
+                </ul>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">Projects</h2>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>South Ural State University (national research university), 
+                    Bachelor’s degree in Сontrol in technical systems (2013 - 2017)</p>
+            </section>
+            <section class="section" id="english">
+                <h2 class="section-title">English</h2>
+                <p>B1 Intermediate</p>
+            </section>
         </div>
     </main>
     <footer class="footer">
