--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#contcts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                     <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
@@ -31,6 +31,7 @@
         <div class="container">
             <section class="section" id="profile">
                 <h1 class="section-title">Repnikova Evgeniya</h1>
+                <img src="./assets/img/image.jpg" width="200" alt="avatar">
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
@@ -70,11 +71,14 @@
             </section>
             <section class="section" id="projects">
                 <h2 class="section-title">Projects</h2>
+                <ul class="section-list">
+                    <li class="section-item"><a href="https://eugeniare.github.io/my-site/">My-site</a></li>
+                </ul>                
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
                 <p>South Ural State University (national research university), 
-                    Bachelor’s degree in Сontrol in technical systems (2013 - 2017)</p>
+                    Bachelor's degree in Control in technical systems (2013 - 2017)</p>
             </section>
             <section class="section" id="english">
                 <h2 class="section-title">English</h2>
@@ -83,8 +87,12 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container"></div>
-    </footer>
-    <!--<img src="assets/img/image.jpg" alt="my photo">-->
+        <div class="container"> 
+            <section class="section-footer">
+                2023<a href="https://github.com/EugeniaRe">EugeniaRe</a>
+            </section>            
+            <a href="https://rs.school/js-stage0/" class="rss"><img src="./assets/img/rs_school_js.svg" alt="rs school logo"></a>
+        </div>
+    </footer>    
 </body>
 </html>
