fix: fix footer

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     </main>
     <footer class="footer">
         <div class="container"> 
-            <section class="section-footer">
+            <div class="div-footer">
                 2023<a href="https://github.com/EugeniaRe">EugeniaRe</a>
-            </section>            
+            </div>            
             <a href="https://rs.school/js-stage0/" class="rss"><img src="./assets/img/rs_school_js.svg" alt="rs school logo"></a>
         </div>
     </footer>    
