fix: delete trailing whitespace

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
-                <p>I'd like to get new useful knowledge in programming. 
-                    Now I'm on maternity leave and I need to look for a new job soon. 
+                <p>I'd like to get new useful knowledge in programming.
+                    Now I'm on maternity leave and I need to look for a new job soon.
                     Also I really like to learn something new.</p>
             </section>
             <section class="section" id="skills">
@@ -64,7 +64,7 @@
             <section class="section" id="courses">
                 <h2 class="section-title">Courses</h2>
                 <ul class="section-list">
-                    <li class="section-item">2014 - 2017; English courses in South Ural 
+                    <li class="section-item">2014 - 2017; English courses in South Ural
                         State University (national research university)</li>
                     <li class="section-item">2018; Scientific consulting and training center "Serto"</li>
                 </ul>
@@ -73,11 +73,11 @@
                 <h2 class="section-title">Projects</h2>
                 <ul class="section-list">
                     <li class="section-item"><a href="https://eugeniare.github.io/my-site/">My-site</a></li>
-                </ul>                
+                </ul>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
-                <p>South Ural State University (national research university), 
+                <p>South Ural State University (national research university),
                     Bachelor's degree in Control in technical systems (2013 - 2017)</p>
             </section>
             <section class="section" id="english">
@@ -87,12 +87,24 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container"> 
+        <div class="container">
             <div class="div-footer">
                 2023<a href="https://github.com/EugeniaRe">EugeniaRe</a>
-            </div>            
+            </div>
             <a href="https://rs.school/js-stage0/" class="rss"><img src="./assets/img/rs_school_js.svg" alt="rs school logo"></a>
         </div>
-    </footer>    
+    </footer>
+
+
+
+
+    <div class="input-wrapper">
+        <input type="radio">
+    </div>
+
+
+
+
+
 </body>
 </html>
